# ingpu

./: CMakeLists.txt  README  agent_struct.h  build.sh  kernel.h  main.cpp  parse_net.h  stopwatch.hpp
soa/: kernel_soa.cu  kernel_soa.h
